fixed spacing in mobile

--- a/Pages/home-style.css
+++ b/Pages/home-style.css
@@ -502,7 +502,7 @@ body
   {
     padding-left: 5%;
     flex-direction: column;
-    gap: 60px;
+    gap: 40px;
   }
 
   #fixed-info-section
